hphp/test/slow/sealed/sealed_classes12.php.expectf
Fatal error: Class Class2 may not inherit from sealed class (SomeClass) without being in the whitelist in %s/fbcode/hphp/test/slow/sealed/sealed_classes12.inc on line 3
